--- a/src/components/Loding.css
+++ b/src/components/Loding.css
@@ -1,5 +1,5 @@
 .loding_container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     display: flex;
@@ -8,6 +8,9 @@
     justify-content: center;
     position: absolute;
     z-index: 99;
+    background-color: black;
+    overflow: hidden;
+    scroll-behavior: none;
     
 }
 .loding_container .name{
