--- a/src/components/Topbar.css
+++ b/src/components/Topbar.css
@@ -1,4 +1,5 @@
 .top_bar{
+    /* width: 75%; */
     width: calc(100vw - 350px);
     position: fixed;
     background-color: #14131a;
@@ -22,4 +23,21 @@
     justify-content: center;
     gap: 10px;
     cursor: pointer;
+}
+.hamburgur{
+    border: 1px solid gray;
+    padding: 2px;
+    cursor: pointer;
+    margin-left: 10px;
+    color:white;
+    display: none;
+}
+#hammenue{
+    display: flex;
+    position: fixed;
+    left: 0px;
+    width: 300px;
+    min-height: 20vmin;
+    background-color: #1c1c1d;
+    color: white;
 }
